yaml:xml macro was created StackLimiter is moved one package higher can be used from other modules